[package]
name = "rerast_stable"
version = "0.1.0"
authors = ["David Lattimore <dml@google.com>"]
edition = "2018"

[dependencies]
argh = "0.1.3"
ra_syntax = { path = "/home/dml/src/rust-analyzer/crates/ra_syntax" }
ra_tt = { path = "/home/dml/src/rust-analyzer/crates/ra_tt" }
ra_mbe = { path = "/home/dml/src/rust-analyzer/crates/ra_mbe" }
ra_parser = { path = "/home/dml/src/rust-analyzer/crates/ra_parser" }
