[package]
name = "rerast_stable"
version = "0.1.0"
authors = ["David Lattimore <dml@google.com>"]
edition = "2018"

[dependencies]
argh = "0.1.3"
ra_syntax = { path = "../../src/rust-analyzer/crates/ra_syntax" }
ra_db = { path = "../../src/rust-analyzer/crates/ra_db" }
ra_ide_db = { path = "../../src/rust-analyzer/crates/ra_ide_db" }
ra_hir = { path = "../../src/rust-analyzer/crates/ra_hir" }
ra_text_edit = { path = "../../src/rust-analyzer/crates/ra_text_edit" }
ra_parser = { path = "../../src/rust-analyzer/crates/ra_parser" }
